examples/errors/e1.avm
push int32(42)
push int32(33) 

add

push float(44.55) 	mul int8(4)	; HERE
